[gd_scene load_steps=6 format=3 uid="uid://coinmuixvfl80"]

[ext_resource type="Theme" uid="uid://tpyx1xmltsvt" path="res://themes/VHS.tres" id="1_rw8og"]
[ext_resource type="Script" path="res://scripts/lore_tutorial.gd" id="1_yqw5x"]
[ext_resource type="AudioStream" uid="uid://c37qqga3d5kct" path="res://sfx/typing.mp3" id="2_dmifl"]
[ext_resource type="Shader" path="res://shaders/vbars_canvas.gdshader" id="2_qi4mf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fqiqx"]
shader = ExtResource("2_qi4mf")
shader_parameter/colourSplitIntensity = 0.4
shader_parameter/noiseIntensity_u = 0.6
shader_parameter/barsIntensity = 0.7

[node name="LoreTutorial" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_yqw5x")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("2_dmifl")
autoplay = true

[node name="BG" type="ColorRect" parent="CanvasLayer"]
offset_left = -26.0
offset_top = -12.0
offset_right = 980.0
offset_bottom = 566.0
color = Color(0, 0, 0, 1)

[node name="ObjectiveHelp" type="Label" parent="CanvasLayer"]
visible = false
offset_right = 122.0
offset_bottom = 15.0
theme = ExtResource("1_rw8og")
text = "> your objectives are up here"

[node name="SprintHelp" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -15.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_rw8og")
text = "there's a sprint bar over here <"

[node name="PromptHelp" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -15.0
offset_right = 272.0
grow_vertical = 0
theme = ExtResource("1_rw8og")
text = "> help text is down here"

[node name="AnyKeyContinue" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -7.5
offset_right = 136.0
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rw8og")
text = "move with WASD, R to respawn
shift to sprint
Switch lenses with 1/2/3 once obtained

press any key to continue"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_fqiqx")
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
